Terraform/sg.tf
# security group 

resource "aws_security_group" "deepseek_sg" {
  name_prefix = "deepseek_sg-"

  ingress  {
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # Restrict it if using in prod env
  }

  ingress  {
  from_port = 5000
  to_port = 5000
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"] # Restrict it if using in prod env
  }

  egress  {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
